--- a/extract_patches.ipynb
+++ b/extract_patches.ipynb
@@ -14,7 +14,8 @@
     "from tqdm import tqdm\n",
     "from skimage.util.shape import view_as_blocks\n",
     "from skimage import io\n",
-    "from params import dresden_images_root, images_db_path, patch_span, patch_num, patches_root, patches_db_path"
+    "from params import dresden_images_root, images_db_path, patch_span, \\\n",
+    "        patch_num, patches_root, train_db_path, test_db_path"
    ]
   },
   {
@@ -30,80 +31,52 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "images_db = np.load(images_db_path, allow_pickle=True).item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_list = np.unique(images_db['brand_model'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_list = os.listdir(dresden_images_root)\n",
-    "num_test = int(len(img_list) * 0.2)\n",
-    "num_train = int(len(img_list) - num_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shuffle_list = np.random.permutation(img_list)\n",
-    "\n",
-    "train_list = shuffle_list[0:num_train].tolist()\n",
-    "test_list = shuffle_list[num_train:].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agfa_DC-504 in training set: 134.\n",
-      "Agfa_DC-504 in test set: 35.\n",
+      "Agfa_DC-504 in training set: 139.\n",
+      "Agfa_DC-504 in test set: 30.\n",
       "\n",
-      "Agfa_DC-733s in training set: 227.\n",
-      "Agfa_DC-733s in test set: 54.\n",
+      "Agfa_DC-733s in training set: 214.\n",
+      "Agfa_DC-733s in test set: 67.\n",
       "\n",
-      "Agfa_DC-830i in training set: 290.\n",
-      "Agfa_DC-830i in test set: 73.\n",
+      "Agfa_DC-830i in training set: 289.\n",
+      "Agfa_DC-830i in test set: 74.\n",
       "\n",
-      "Agfa_Sensor505-x in training set: 139.\n",
-      "Agfa_Sensor505-x in test set: 33.\n",
+      "Agfa_Sensor505-x in training set: 141.\n",
+      "Agfa_Sensor505-x in test set: 31.\n",
       "\n",
-      "Agfa_Sensor530s in training set: 297.\n",
-      "Agfa_Sensor530s in test set: 75.\n",
+      "Agfa_Sensor530s in training set: 295.\n",
+      "Agfa_Sensor530s in test set: 77.\n",
       "\n",
-      "Canon_Ixus55 in training set: 177.\n",
-      "Canon_Ixus55 in test set: 47.\n",
+      "Canon_Ixus55 in training set: 187.\n",
+      "Canon_Ixus55 in test set: 37.\n",
       "\n",
-      "Canon_Ixus70 in training set: 458.\n",
-      "Canon_Ixus70 in test set: 109.\n",
+      "Canon_Ixus70 in training set: 456.\n",
+      "Canon_Ixus70 in test set: 111.\n",
       "\n",
-      "Canon_PowerShotA640 in training set: 147.\n",
-      "Canon_PowerShotA640 in test set: 41.\n",
+      "Canon_PowerShotA640 in training set: 148.\n",
+      "Canon_PowerShotA640 in test set: 40.\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "images_db = np.load(images_db_path, allow_pickle=True).item()\n",
+    "\n",
+    "model_list = np.unique(images_db['brand_model'])\n",
+    "\n",
+    "img_list = os.listdir(dresden_images_root)\n",
+    "num_test = int(len(img_list) * 0.2)\n",
+    "num_train = int(len(img_list) - num_test)\n",
+    "\n",
+    "shuffle_list = np.random.permutation(img_list)\n",
+    "\n",
+    "train_list = shuffle_list[0:num_train].tolist()\n",
+    "test_list = shuffle_list[num_train:].tolist()\n",
+    "\n",
     "for model in model_list:\n",
     "    tmp_list = fnmatch.filter(train_list, model + '*')\n",
     "    print(\"{} in training set: {}.\".format(model, len(tmp_list)))\n",
@@ -113,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,15 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_and_save(args):\n",
     "    # 'Agfa/DC-504/Agfa_DC-504_0_1/Agfa_DC-504_0_1_00.png' for example,\n",
     "    # last part is the patch idex.\n",
-    "    output_rel_paths = [os.path.join(args['img_brand'],args['img_model'],\n",
-    "                        os.path.splitext(os.path.split(args['img_path'])[-1])[0],\n",
+    "    output_rel_paths = [os.path.join(args['data_set'], args['img_brand_model'],\n",
     "                        os.path.splitext(os.path.split(args['img_path'])[-1])[0]+'_'+'{:02}'.format(patch_idx) + '.png')\\\n",
     "                        for patch_idx in range(args['patch_num'])]\n",
     "    read_img = False\n",
@@ -168,14 +140,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files_labels = dict(zip(images_db['path'], images_db['brand_model']))\n",
+    "\n",
+    "train_labels = []\n",
+    "test_labels = []\n",
+    "\n",
+    "for path in train_list:\n",
+    "    train_labels += [files_labels[path]]\n",
+    "    \n",
+    "for path in test_list:\n",
+    "    test_labels += [files_labels[path]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2336it [00:00, 473465.46it/s]"
+      "2336it [00:00, 47928.81it/s]"
      ]
     },
     {
@@ -190,21 +180,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "2336it [00:00, 169305.77it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating patches dataset...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "\n"
      ]
     },
@@ -212,47 +187,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving patches dataset to: patches/patch.npy\n",
       "Completed.\n"
      ]
     }
    ],
    "source": [
     "print('Collecting image data...')\n",
-    "imgs_list = []\n",
-    "for img_brand,img_model,img_path in \\\n",
-    "        tqdm(zip(images_db['brand'], images_db['model'], images_db['path'])):\n",
-    "    imgs_list += [{'img_path':img_path,\n",
-    "                   'img_brand':img_brand,\n",
-    "                   'img_model':img_model,\n",
-    "                   'patch_span':patch_span,\n",
-    "                   'patch_num':patch_num,\n",
-    "                   'patch_root': patches_root,\n",
-    "                   'img_root': dresden_images_root\n",
-    "                   }]\n",
+    "\n",
+    "train_imgs_list = []\n",
+    "test_imgs_list = []\n",
+    "\n",
+    "for img_brand_model,img_path in \\\n",
+    "    tqdm(zip(images_db['brand_model'], images_db['path'])):\n",
+    "                   \n",
+    "    if img_path in train_list:\n",
+    "        train_imgs_list += [{'data_set':'train',\n",
+    "                           'img_path':img_path,\n",
+    "                           'img_brand_model':img_brand_model,\n",
+    "                           'patch_span':patch_span,\n",
+    "                           'patch_num':patch_num,\n",
+    "                           'patch_root': patches_root,\n",
+    "                           'img_root': dresden_images_root\n",
+    "                           }]\n",
+    "    else:\n",
+    "        test_imgs_list += [{'data_set':'test',\n",
+    "                           'img_path':img_path,\n",
+    "                           'img_brand_model':img_brand_model,\n",
+    "                           'patch_span':patch_span,\n",
+    "                           'patch_num':patch_num,\n",
+    "                           'patch_root': patches_root,\n",
+    "                           'img_root': dresden_images_root\n",
+    "                           }]\n",
     "    \n",
     "print('Extracting patches...')\n",
     "\n",
     "num_processes = 12\n",
     "pool = Pool(processes=num_processes)\n",
-    "patches_paths = pool.map(extract_and_save, imgs_list)\n",
+    "train_paths = pool.map(extract_and_save, train_imgs_list)\n",
+    "test_paths = pool.map(extract_and_save, test_imgs_list)\n",
     "\n",
-    "# Create patches dataset\n",
-    "print('Creating patches dataset...')\n",
-    "patch_dataset = dict()\n",
-    "patch_dataset['path'] = []\n",
-    "patch_dataset['shot'] = []\n",
+    "# # Create patches dataset\n",
+    "# print('Creating patches dataset...')\n",
+    "# train_dataset = dict()\n",
+    "# train_dataset['path'] = []\n",
+    "# train_dataset['labels'] = []\n",
     "\n",
-    "for patch_rel_paths, img_shot in tqdm(zip(patches_paths, images_db['shot'])):\n",
-    "    for patch_rel_path in patch_rel_paths:\n",
-    "        patch_dataset['path'] += [patch_rel_path]\n",
-    "        patch_dataset['shot'] += [img_shot]\n",
+    "# for patch_rel_paths, img_labels in tqdm(zip(train_paths, train_labels)):\n",
+    "#     for patch_rel_path in patch_rel_paths:\n",
+    "#         train_dataset['path'] += [patch_rel_path]\n",
+    "#         train_dataset['labels'] += [img_labels]\n",
     "\n",
-    "patch_dataset['path'] = np.asarray(patch_dataset['path']).flatten()\n",
-    "patch_dataset['shot'] = np.asarray(patch_dataset['shot']).flatten()\n",
+    "# train_dataset['path'] = np.asarray(train_dataset['path']).flatten()\n",
+    "# train_dataset['shot'] = np.asarray(train_dataset['labels']).flatten()\n",
+    "        \n",
+    "# test_dataset = dict()\n",
+    "# test_dataset['path'] = []\n",
+    "# test_dataset['labels'] = []\n",
     "\n",
-    "print('Saving patches dataset to: {:}'.format(patches_db_path))\n",
-    "np.save(patches_db_path, patch_dataset)\n",
+    "# for patch_rel_paths, img_labels in tqdm(zip(test_paths, test_labels)):\n",
+    "#     for patch_rel_path in patch_rel_paths:\n",
+    "#         test_dataset['path'] += [patch_rel_path]\n",
+    "#         test_dataset['labels'] += [img_labels]\n",
+    "\n",
+    "# test_dataset['path'] = np.asarray(test_dataset['path']).flatten()\n",
+    "# test_dataset['labels'] = np.asarray(test_dataset['labels']).flatten()\n",
+    "\n",
+    "# print('Saving training patches dataset to: {:}'.format(train_db_path))\n",
+    "# np.save(train_db_path, train_dataset)\n",
+    "# print('Saving testing patches dataset to: {:}'.format(test_db_path))\n",
+    "# np.save(test_db_path, test_dataset)\n",
     "\n",
     "print('Completed.')"
    ]
