--- a/database.ipynb
+++ b/database.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "import urllib\n",
     "import pandas as pd\n",
-    "import cv2\n",
+    "from skimage import io\n",
     "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from params import dresden_images_root, dresden_csv, images_db_path"
@@ -21,16 +21,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brand_list = []\n",
-    "model_list = []\n",
-    "brand_model_list = []\n",
-    "instance_list = []\n",
-    "shot_list = []\n",
     "path_list = []\n",
-    "position_num_list = []\n",
-    "position_name_list = []\n",
-    "motive_num_list = []\n",
-    "motive_name_list = []    "
+    "brand_model_list = []\n",
+    "# shot_list = []\n",
+    "# brand_list = []\n",
+    "# model_list = []\n",
+    "# instance_list = []\n",
+    "# position_num_list = []\n",
+    "# position_name_list = []\n",
+    "# motive_num_list = []\n",
+    "# motive_name_list = []    "
    ]
   },
   {
@@ -45,8 +45,9 @@
     "\n",
     "data = pd.read_csv(dresden_csv)\n",
     "\n",
-    "# Here I only use Agfa and Canon for experiment\n",
-    "data = data[(data['brand'] == 'Agfa') | (data['brand'] == 'Canon')]"
+    "# Here I only use Canon for experiment\n",
+    "# data = data[(data['brand'] == 'Agfa') | (data['brand'] == 'Canon')]\n",
+    "data = data[(data['brand'] == 'Canon')]"
    ]
   },
   {
@@ -64,14 +65,41 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 979/979 [02:06<00:00,  7.77it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of images: 979\n",
+      "Saving db to: dresden.npy\n",
+      "Completed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "count = 0\n",
     "for csv_row in tqdm(csv_rows):\n",
-    "    filename, \\\n",
-    "    brand, model, instance, shot, \\\n",
-    "    position_num, position_name, motive_num, motive_name, \\\n",
-    "    url = csv_row\n",
+    "#     filename, \\\n",
+    "#     brand, model, instance, shot, \\\n",
+    "#     position_num, position_name, motive_num, motive_name, \\\n",
+    "#     url = csv_row\n",
+    "\n",
+    "    filename, brand, model = csv_row[0:3]\n",
+    "    url = csv_row[-1]\n",
     "\n",
     "    file_path = os.path.join(dresden_images_root,filename)\n",
     "\n",
@@ -83,7 +111,7 @@
     "        # print('Loading {:}'.format(filename))\n",
     "\n",
     "        # Load the image and check its dimensions\n",
-    "        img = cv2.imread(file_path)\n",
+    "        img = io.imread(file_path)\n",
     "\n",
     "        if img is None or not isinstance(img, np.ndarray):\n",
     "            print('Unable to read image: {:}'.format(filename))\n",
@@ -93,18 +121,17 @@
     "        # if the size of all images are not zero, then append to the list\n",
     "        if all(img.shape[:2]):\n",
     "            count += 1\n",
-    "\n",
     "            brand_model = '_'.join([brand, model])\n",
-    "            brand_list.append(brand)\n",
-    "            model_list.append(model)\n",
-    "            brand_model_list.append(brand_model)\n",
-    "            instance_list.append(int(instance))\n",
-    "            shot_list.append(int(shot))\n",
+    "            brand_model_list.append(brand_model) \n",
     "            path_list.append(filename)\n",
-    "            position_num_list.append(int(position_num))\n",
-    "            position_name_list.append(position_name)\n",
-    "            motive_num_list.append(int(motive_num))\n",
-    "            motive_name_list.append(motive_name)\n",
+    "#             shot_list.append(int(shot))\n",
+    "#             brand_list.append(brand)\n",
+    "#             model_list.append(model)\n",
+    "#             instance_list.append(int(instance))\n",
+    "#             position_num_list.append(int(position_num))\n",
+    "#             position_name_list.append(position_name)\n",
+    "#             motive_num_list.append(int(motive_num))\n",
+    "#             motive_name_list.append(motive_name)\n",
     "\n",
     "        else:\n",
     "            print('Zero-sized image: {:}'.format(filename))\n",
@@ -119,22 +146,22 @@
     "        if os.path.exists(file_path):\n",
     "            os.unlink(file_path)\n",
     "\n",
-    "print('Number of images: {:}'.format(len(shot_list)))\n",
+    "print('Number of images: {:}'.format(len(path_list)))\n",
     "\n",
     "print('Saving db to: {:}'.format(images_db_path))\n",
     "\n",
     "# create a images database as a dictionary\n",
     "images_db = {\n",
-    "    'brand': np.asarray(brand_list).flatten(),\n",
-    "    'model': np.asarray(model_list).flatten(),\n",
     "    'brand_model': np.asarray(brand_model_list).flatten(),\n",
-    "    'instance': np.asarray(instance_list).flatten(),\n",
-    "    'shot': np.asarray(shot_list).flatten(),\n",
     "    'path': np.asarray(path_list).flatten(),\n",
-    "    'position_num': np.asarray(position_num_list).flatten(),\n",
-    "    'position_name': np.asarray(position_name_list).flatten(),\n",
-    "    'motive_num': np.asarray(motive_num_list).flatten(),\n",
-    "    'motive_name': np.asarray(motive_name_list).flatten(),\n",
+    "#     'instance': np.asarray(instance_list).flatten(),\n",
+    "#     'shot': np.asarray(shot_list).flatten(),\n",
+    "#     'brand': np.asarray(brand_list).flatten(),\n",
+    "#     'model': np.asarray(model_list).flatten(),\n",
+    "#     'position_num': np.asarray(position_num_list).flatten(),\n",
+    "#     'position_name': np.asarray(position_name_list).flatten(),\n",
+    "#     'motive_num': np.asarray(motive_num_list).flatten(),\n",
+    "#     'motive_name': np.asarray(motive_name_list).flatten(),\n",
     "}\n",
     "np.save(images_db_path, images_db)\n",
     "\n",
@@ -158,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
