--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing op MatMul in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op MatMul in device /job:localhost/replica:0/task:0/device:GPU:0\n",
       "tf.Tensor(\n",
       "[[22. 28.]\n",
       " [49. 64.]], shape=(2, 2), dtype=float32)\n"
@@ -50,7 +50,6 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
     "print (\"TensorFlow version: \" + tf.__version__)"
    ]
   },
@@ -63,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num GPUs Available:  0\n"
+      "Num GPUs Available:  1\n"
      ]
     }
    ],
@@ -148,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
