--- a/extract_patches.ipynb
+++ b/extract_patches.ipynb
@@ -31,62 +31,76 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_db = np.load(images_db_path, allow_pickle=True).item()\n",
+    "\n",
+    "model_list = np.unique(images_db['brand_model'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_list = images_db['path']\n",
+    "num_test = int(len(img_list) * 0.2)\n",
+    "num_train = int(len(img_list) - num_test)\n",
+    "num_val = int(num_train * 0.2)\n",
+    "num_train = num_train - num_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shuffle_list = np.random.permutation(img_list)\n",
+    "\n",
+    "train_list = shuffle_list[0:num_train].tolist()\n",
+    "val_list = shuffle_list[num_train:num_train + num_val].tolist()\n",
+    "test_list = shuffle_list[num_train + num_val:].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agfa_DC-504 in training set: 139.\n",
-      "Agfa_DC-504 in test set: 30.\n",
+      "Canon_Ixus55 in training set: 146.\n",
+      "Canon_Ixus55 in validation set: 38.\n",
+      "Canon_Ixus55 in test set: 40.\n",
       "\n",
-      "Agfa_DC-733s in training set: 214.\n",
-      "Agfa_DC-733s in test set: 67.\n",
+      "Canon_Ixus70 in training set: 359.\n",
+      "Canon_Ixus70 in validation set: 85.\n",
+      "Canon_Ixus70 in test set: 123.\n",
       "\n",
-      "Agfa_DC-830i in training set: 289.\n",
-      "Agfa_DC-830i in test set: 74.\n",
-      "\n",
-      "Agfa_Sensor505-x in training set: 141.\n",
-      "Agfa_Sensor505-x in test set: 31.\n",
-      "\n",
-      "Agfa_Sensor530s in training set: 295.\n",
-      "Agfa_Sensor530s in test set: 77.\n",
-      "\n",
-      "Canon_Ixus55 in training set: 187.\n",
-      "Canon_Ixus55 in test set: 37.\n",
-      "\n",
-      "Canon_Ixus70 in training set: 456.\n",
-      "Canon_Ixus70 in test set: 111.\n",
-      "\n",
-      "Canon_PowerShotA640 in training set: 148.\n",
-      "Canon_PowerShotA640 in test set: 40.\n",
+      "Canon_PowerShotA640 in training set: 123.\n",
+      "Canon_PowerShotA640 in validation set: 33.\n",
+      "Canon_PowerShotA640 in test set: 32.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "images_db = np.load(images_db_path, allow_pickle=True).item()\n",
-    "\n",
-    "model_list = np.unique(images_db['brand_model'])\n",
-    "\n",
-    "img_list = os.listdir(dresden_images_root)\n",
-    "num_test = int(len(img_list) * 0.2)\n",
-    "num_train = int(len(img_list) - num_test)\n",
-    "\n",
-    "shuffle_list = np.random.permutation(img_list)\n",
-    "\n",
-    "train_list = shuffle_list[0:num_train].tolist()\n",
-    "test_list = shuffle_list[num_train:].tolist()\n",
-    "\n",
     "for model in model_list:\n",
     "    tmp_list = fnmatch.filter(train_list, model + '*')\n",
     "    print(\"{} in training set: {}.\".format(model, len(tmp_list)))\n",
+    "    tmp_list = fnmatch.filter(val_list, model + '*')\n",
+    "    print(\"{} in validation set: {}.\".format(model, len(tmp_list)))\n",
     "    tmp_list = fnmatch.filter(test_list, model + '*')\n",
     "    print(\"{} in test set: {}.\\n\".format(model, len(tmp_list)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_and_save(args):\n",
-    "    # 'Agfa/DC-504/Agfa_DC-504_0_1/Agfa_DC-504_0_1_00.png' for example,\n",
+    "    # 'Agfa_DC-504/Agfa_DC-504_0_1_00.png' for example,\n",
     "    # last part is the patch idex.\n",
     "    output_rel_paths = [os.path.join(args['data_set'], args['img_brand_model'],\n",
     "                        os.path.splitext(os.path.split(args['img_path'])[-1])[0]+'_'+'{:02}'.format(patch_idx) + '.png')\\\n",
@@ -140,17 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "files_labels = dict(zip(images_db['path'], images_db['brand_model']))\n",
     "\n",
     "train_labels = []\n",
+    "val_labels = []\n",
     "test_labels = []\n",
     "\n",
     "for path in train_list:\n",
     "    train_labels += [files_labels[path]]\n",
+    "    \n",
+    "for path in val_list:\n",
+    "    val_labels += [files_labels[path]]\n",
     "    \n",
     "for path in test_list:\n",
     "    test_labels += [files_labels[path]]"
@@ -158,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2336it [00:00, 47928.81it/s]"
+      "979it [00:00, 70851.93it/s]"
      ]
     },
     {
@@ -184,10 +202,19 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Completed.\n"
+     "ename": "FileExistsError",
+     "evalue": "[Errno 17] File exists: 'patches/test/Canon_Ixus55'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/home/gary/anaconda3/envs/cam/lib/python3.7/multiprocessing/pool.py\", line 121, in worker\n    result = (True, func(*args, **kwds))\n  File \"/home/gary/anaconda3/envs/cam/lib/python3.7/multiprocessing/pool.py\", line 44, in mapstar\n    return list(map(*args))\n  File \"<ipython-input-8-bcf86c6fd305>\", line 23, in extract_and_save\n    os.makedirs(out_fulldir)\n  File \"/home/gary/anaconda3/envs/cam/lib/python3.7/os.py\", line 221, in makedirs\n    mkdir(name, mode)\nFileExistsError: [Errno 17] File exists: 'patches/test/Canon_Ixus55'\n\"\"\"",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-24741e68062a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mtrain_paths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mextract_and_save\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_imgs_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0mval_paths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mextract_and_save\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_imgs_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m \u001b[0mtest_paths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mextract_and_save\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_imgs_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;31m# # Create patches dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/cam/lib/python3.7/multiprocessing/pool.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    266\u001b[0m         \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mthat\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mreturned\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    267\u001b[0m         '''\n\u001b[0;32m--> 268\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapstar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    269\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstarmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/cam/lib/python3.7/multiprocessing/pool.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    655\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    656\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 657\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    658\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    659\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: 'patches/test/Canon_Ixus55'"
      ]
     }
    ],
@@ -195,6 +222,7 @@
     "print('Collecting image data...')\n",
     "\n",
     "train_imgs_list = []\n",
+    "val_imgs_list = []\n",
     "test_imgs_list = []\n",
     "\n",
     "for img_brand_model,img_path in \\\n",
@@ -209,6 +237,17 @@
     "                           'patch_root': patches_root,\n",
     "                           'img_root': dresden_images_root\n",
     "                           }]\n",
+    "        \n",
+    "    elif img_path in val_list:\n",
+    "        val_imgs_list += [{'data_set':'val',\n",
+    "                           'img_path':img_path,\n",
+    "                           'img_brand_model':img_brand_model,\n",
+    "                           'patch_span':patch_span,\n",
+    "                           'patch_num':patch_num,\n",
+    "                           'patch_root': patches_root,\n",
+    "                           'img_root': dresden_images_root\n",
+    "                           }]\n",
+    "        \n",
     "    else:\n",
     "        test_imgs_list += [{'data_set':'test',\n",
     "                           'img_path':img_path,\n",
@@ -224,6 +263,7 @@
     "num_processes = 12\n",
     "pool = Pool(processes=num_processes)\n",
     "train_paths = pool.map(extract_and_save, train_imgs_list)\n",
+    "val_paths = pool.map(extract_and_save, val_imgs_list)\n",
     "test_paths = pool.map(extract_and_save, test_imgs_list)\n",
     "\n",
     "# # Create patches dataset\n",
@@ -277,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
