--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -129,6 +129,110 @@
     "test_dir = os.path.join(patches_root, \"test\")\n",
     "test_dataset = set_up_data_pipeline(patches_root, test_db_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing op RandomUniform in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op Sub in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op Mul in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op Add in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarIsInitializedOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op LogicalNot in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op Assert in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op AssignVariableOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op Fill in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 256, 256, 3)       78        \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 128, 128, 96)      14208     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization (BatchNo (None, 128, 128, 96)      384       \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 128, 128, 96)      0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 64, 64, 96)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 64, 64, 64)        153664    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 64, 64, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 64, 64, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 31, 31, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 31, 31, 64)        102464    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 31, 31, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 31, 31, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 15, 15, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 15, 15, 128)       8320      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 15, 15, 128)       512       \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 15, 15, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 7, 7, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 6272)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 200)               1254600   \n",
+      "_________________________________________________________________\n",
+      "activation_4 (Activation)    (None, 200)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 200)               40200     \n",
+      "_________________________________________________________________\n",
+      "activation_5 (Activation)    (None, 200)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 8)                 1608      \n",
+      "=================================================================\n",
+      "Total params: 1,576,550\n",
+      "Trainable params: 1,575,846\n",
+      "Non-trainable params: 704\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.engine.sequential.Sequential at 0x7fdea844bf50>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import network\n",
+    "network.build()"
+   ]
   }
  ],
  "metadata": {
@@ -147,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
