--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,6 +13,53 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ERROR: Failed to launch TensorBoard (exited with 1).\n",
+       "Contents of stderr:\n",
+       "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
+       "TensorBoard 2.0.0 at http://localhost:6006/ (Press CTRL+C to quit)\n",
+       "Traceback (most recent call last):\n",
+       "  File \"/home/pan/anaconda3/envs/cam/bin/tensorboard\", line 10, in <module>\n",
+       "    sys.exit(run_main())\n",
+       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/main.py\", line 64, in run_main\n",
+       "    app.run(tensorboard.main, flags_parser=tensorboard.configure)\n",
+       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/absl/app.py\", line 299, in run\n",
+       "    _run_main(main, args)\n",
+       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/absl/app.py\", line 250, in _run_main\n",
+       "    sys.exit(main(argv))\n",
+       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/program.py\", line 222, in main\n",
+       "    self._register_info(server)\n",
+       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/program.py\", line 268, in _register_info\n",
+       "    manager.write_info_file(info)\n",
+       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/manager.py\", line 268, in write_info_file\n",
+       "    with open(_get_info_file_path(), \"w\") as outfile:\n",
+       "PermissionError: [Errno 13] Permission denied: '/tmp/.tensorboard-info/pid-3515.info'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir=log/fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -68,170 +115,6 @@
    ],
    "source": [
     "print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```python\n",
-    "model = Sequential([\n",
-    "    Constrained_Conv(5x5x1x3, S=1)\n",
-    "    Conv2D(7x7x3x96, S=2)\n",
-    "    BatchNorm()\n",
-    "    ReLU()\n",
-    "    MaxPooling2D(3x3, S=2)\n",
-    "    \n",
-    "    Conv2D(5x5x96x64, S=1)\n",
-    "    BatchNorm()\n",
-    "    ReLU()\n",
-    "    MaxPooling2D(3x3, S=2)\n",
-    "    \n",
-    "    Conv2D(5x5x64x64, S=1)\n",
-    "    BatchNorm()\n",
-    "    ReLU()\n",
-    "    MaxPooling2D(3x3, S=2)\n",
-    "    \n",
-    "    Conv2D(1x1x64x128, S=1)\n",
-    "    BatchNorm()\n",
-    "    ReLU()\n",
-    "    MaxPooling2D(3x3, S=2)\n",
-    "    \n",
-    "    FC(200)\n",
-    "    ReLU()\n",
-    "    FC(200)\n",
-    "    ReLU()\n",
-    "    FC(200)\n",
-    "    SoftMax()  # classes number\n",
-    "])\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*] Prepare data\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"[*] Prepare data\")\n",
-    "# For the sake of simplicity, let us use the test set for validation purposes.\n",
-    "\n",
-    "train_dir = os.path.join(patches_root, \"train\")\n",
-    "train_dataset = set_up_data_pipeline(patches_root, train_db_path)\n",
-    "test_dir = os.path.join(patches_root, \"test\")\n",
-    "test_dataset = set_up_data_pipeline(patches_root, test_db_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing op RandomUniform in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op Sub in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op Mul in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op Add in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarIsInitializedOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op LogicalNot in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op Assert in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op AssignVariableOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op Fill in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op VarHandleOp in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d (Conv2D)              (None, 256, 256, 3)       78        \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 128, 128, 96)      14208     \n",
-      "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 128, 128, 96)      384       \n",
-      "_________________________________________________________________\n",
-      "activation (Activation)      (None, 128, 128, 96)      0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 64, 64, 96)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 64, 64, 64)        153664    \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_1 (Batch (None, 64, 64, 64)        256       \n",
-      "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 64, 64, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 31, 31, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 31, 31, 64)        102464    \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_2 (Batch (None, 31, 31, 64)        256       \n",
-      "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 31, 31, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 15, 15, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 15, 15, 128)       8320      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_3 (Batch (None, 15, 15, 128)       512       \n",
-      "_________________________________________________________________\n",
-      "activation_3 (Activation)    (None, 15, 15, 128)       0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 7, 7, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 6272)              0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 200)               1254600   \n",
-      "_________________________________________________________________\n",
-      "activation_4 (Activation)    (None, 200)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 200)               40200     \n",
-      "_________________________________________________________________\n",
-      "activation_5 (Activation)    (None, 200)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 8)                 1608      \n",
-      "=================================================================\n",
-      "Total params: 1,576,550\n",
-      "Trainable params: 1,575,846\n",
-      "Non-trainable params: 704\n",
-      "_________________________________________________________________\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.engine.sequential.Sequential at 0x7fdea844bf50>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import network\n",
-    "network.build()"
    ]
   }
  ],
