--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-72d594a7d345>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgpus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_physical_devices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GPU'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_memory_growth\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgpus\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "tf.config.experimental.set_memory_growth(gpus[0], True)"
@@ -21,29 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "import numpy as np\n",
     "import os\n",
-    "import sys"
+    "import sys\n",
+    "import split_extract\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "import matplotlib.pyplot as plt\n",
+    "from multiprocessing import Pool\n",
+    "from params import dresden_images_root, images_db_path, patch_span, \\\n",
+    "        patch_num, patches_root, patches_db_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 4875 images belonging to 3 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define image and batch size\n",
     "img_height = 256\n",
@@ -67,26 +77,15 @@
     "# Read the positive test samples.\n",
     "test_generator = test_data_gen.flow_from_directory(\n",
     "                  directory = r\"./patches/test/\",\n",
-    "                  target_size=(img_width, img_height), color_mode='grayscale',\n",
+    "                  target_size=(img_width, img_height), color_mode='grayscale', shuffle=False,\n",
     "                  batch_size=batch_size, class_mode=\"categorical\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "# Evaluate on test data\n",
-      "77/77 [==============================] - 57s 740ms/step - loss: 0.2686 - accuracy: 0.9265\n",
-      "test loss, test acc: [0.26856313186225955, 0.9264958]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('\\n# Evaluate on test data')\n",
     "results = model.evaluate(test_generator)\n",
@@ -95,29 +94,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make predictions for the positive samples.\n",
-    "predictions = model.predict_generator(test_generator)\n",
+    "predictions = model.predict(test_generator)\n",
     "true_pos = 0\n",
     "pos_size = len(predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test set accuracy: 198500.000%\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "predictions[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "num = pos_size // batch_size\n",
     "\n",
@@ -128,9 +128,78 @@
     "        if (label_batch[j, idx] == 1):\n",
     "            true_pos = true_pos + 1\n",
     "\n",
-    "accuracy = true_pos\n",
+    "accuracy = true_pos / pos_size\n",
     "\n",
     "print(\"Test set accuracy: {:.3%}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_db = np.load(images_db_path, allow_pickle=True).item()\n",
+    "\n",
+    "model_list = np.unique(images_db['brand_model'])\n",
+    "img_list = images_db['path']\n",
+    "files_labels = dict(zip(images_db['path'], images_db['brand_model']))\n",
+    "\n",
+    "img_path = np.random.choice(img_list, 1)[0]\n",
+    "img_brand_model = files_labels[img_path]\n",
+    "labels = [img_brand_model] * patch_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_name = os.path.join(dresden_images_root, img_path)\n",
+    "patches = split_extract.patchify(img_name, patch_span, pacth_size=(256, 256)).reshape((-1, 256, 256))\n",
+    "\n",
+    "img_gen = ImageDataGenerator(preprocessing_function=None,\n",
+    "    rescale=1./255)\n",
+    "\n",
+    "# Read the positive test samples.\n",
+    "img_generator = img_gen.flow(np.expand_dims(patches, 3), labels, batch_size=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotImages(images_arr):\n",
+    "    fig, axes = plt.subplots(1, 5, figsize=(20,20))\n",
+    "    axes = axes.flatten()\n",
+    "    for img, ax in zip(images_arr, axes):\n",
+    "        ax.imshow(img[:,:,0], cmap='gray')\n",
+    "        ax.axis('off')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "plotImages(next(img_generator)[0][:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist = [0, 0, 0]\n",
+    "pred = model.predict(img_generator)\n",
+    "\n",
+    "for i in range(patch_num):\n",
+    "    label = np.argmax(pred[i])\n",
+    "    hist[label] += 1\n",
+    "    \n",
+    "print(model_list)\n",
+    "print(img_brand_model)\n",
+    "print(hist)"
    ]
   }
  ],
