extract test images

--- a/extract_patches.ipynb
+++ b/extract_patches.ipynb
@@ -24,8 +24,20 @@
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "if not os.path.exists(patches_root):\n",
-    "    os.makedirs(patches_root)"
+    "if not os.path.exists(robust_root):\n",
+    "    os.makedirs(robust_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(dresden_csv)\n",
+    "\n",
+    "# Here I only use Canon for experiment\n",
+    "data = data[(data['brand'] == 'Agfa') | (data['brand'] == 'Canon')]"
    ]
   },
   {
@@ -74,20 +86,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_labels = dict(zip(images_db['path'], images_db['brand_model']))\n",
+    "# files_labels = dict(zip(images_db['path'], images_db['brand_model']))\n",
     "\n",
-    "train_labels = []\n",
-    "val_labels = []\n",
-    "test_labels = []\n",
+    "# train_labels = []\n",
+    "# val_labels = []\n",
+    "# test_labels = []\n",
     "\n",
-    "for path in train_list:\n",
-    "    train_labels += [files_labels[path]]\n",
+    "# for path in train_list:\n",
+    "#     train_labels += [files_labels[path]]\n",
     "    \n",
-    "for path in val_list:\n",
-    "    val_labels += [files_labels[path]]\n",
+    "# for path in val_list:\n",
+    "#     val_labels += [files_labels[path]]\n",
     "    \n",
-    "for path in test_list:\n",
-    "    test_labels += [files_labels[path]]"
+    "# for path in test_list:\n",
+    "#     test_labels += [files_labels[path]]"
    ]
   },
   {
@@ -196,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
