fix robust test

--- a/robust_test.ipynb
+++ b/robust_test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,68 +33,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "images_db = np.load(images_db_path, allow_pickle=True).item()\n",
     "\n",
-    "model_list = np.unique(images_db['brand_model'])\n",
-    "test_model_list = list(filter(lambda model: re.search(r'^((?!Canon).)*$', model), model_list))\n",
-    "img_list = images_db['path']\n",
-    "test_img_list = list(filter(lambda img: re.search(r'^((?!Canon).)*$', img), img_list))"
+    "test_model_list = list(filter(lambda model: re.search(r'^((?!Canon).)*$', model), images_db['brand_model']))\n",
+    "test_img_list = list(filter(lambda img: re.search(r'^((?!Canon).)*$', img), images_db['path']))\n",
+    "\n",
+    "# How many model in my dataset\n",
+    "model_list = np.unique(test_model_list) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agfa_DC-504 in test set: 169.\n",
-      "Agfa_DC-733s in test set: 281.\n",
-      "Agfa_DC-830i in test set: 363.\n",
-      "Agfa_Sensor505-x in test set: 172.\n",
-      "Agfa_Sensor530s in test set: 372.\n"
+      "Nikon_CoolPixS710 in test set: 925.\n",
+      "Nikon_D200 in test set: 752.\n",
+      "Nikon_D70 in test set: 736.\n",
+      "Nikon_D70s in test set: 367.\n",
+      "Sony_DSC-H50 in test set: 541.\n",
+      "Sony_DSC-T77 in test set: 725.\n",
+      "Sony_DSC-W170 in test set: 405.\n"
      ]
     }
    ],
    "source": [
-    "for model in test_model_list:\n",
-    "    test_list = fnmatch.filter(test_img_list, model + '*')\n",
-    "    print(\"{} in test set: {}.\".format(model, len(test_list)))"
+    "for model in model_list:\n",
+    "    tmp_list = fnmatch.filter(test_model_list, model + '*')\n",
+    "    print(\"{} in test set: {}.\".format(model, len(tmp_list)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# files_labels = dict(zip(images_db['path'], images_db['brand_model']))\n",
-    "# test_labels = []\n",
-    "\n",
-    "# for path in test_img_list:\n",
-    "#     test_labels += [files_labels[path]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2336it [00:00, 519121.23it/s]\n"
-     ]
-    }
-   ],
-   "source": [
+    "test_list = []\n",
     "for img_brand_model, img_path in \\\n",
     "    tqdm(zip(test_model_list, test_img_list)):\n",
     "        test_list += [{'data_set':'test',\n",
@@ -117,9 +100,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cam] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cam-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
