update robust test

--- a/robust_gen.ipynb
+++ b/robust_gen.ipynb
@@ -16,7 +16,7 @@
     "from multiprocessing import Pool\n",
     "from tqdm import tqdm\n",
     "from params import dresden_images_root, images_db_path, patch_span, \\\n",
-    "        patch_num, robust_root, robust_db_path"
+    "        patch_num, robust_root"
    ]
   },
   {
