--- a/test.ipynb
+++ b/test.ipynb
@@ -105,25 +105,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Make predictions for the positive samples.\n",
-    "# predictions = model.predict(test_generator)\n",
+    "# Make predictions for the positive samples.\n",
+    "predictions = model.predict(test_generator)\n",
     "\n",
-    "# pos_size = len(predictions)\n",
+    "pos_size = len(predictions)\n",
     "\n",
-    "# num = pos_size // batch_size\n",
-    "# test_generator.reset()\n",
-    "# true_pos = 0\n",
+    "num = pos_size // batch_size\n",
+    "test_generator.reset()\n",
+    "true_pos = 0\n",
     "\n",
-    "# for i in range(num):\n",
-    "#     label_batch = next(test_generator)[1]\n",
-    "#     for j in range(batch_size):\n",
-    "#         idx = np.argmax(predictions[i * batch_size + j])\n",
-    "#         if (label_batch[j, idx] == 1):\n",
-    "#             true_pos = true_pos + 1\n",
+    "for i in range(num):\n",
+    "    label_batch = next(test_generator)[1]\n",
+    "    for j in range(batch_size):\n",
+    "        idx = np.argmax(predictions[i * batch_size + j])\n",
+    "        if (label_batch[j, idx] == 1):\n",
+    "            true_pos = true_pos + 1\n",
     "\n",
-    "# accuracy = true_pos / pos_size\n",
+    "accuracy = true_pos / pos_size\n",
     "\n",
-    "# print(\"Test set accuracy: {:.3%}\".format(accuracy))"
+    "print(\"Test set accuracy: {:.3%}\".format(accuracy))"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
